# hesm-huisjes

./: .firebaserc  .gitignore  CLAUDE.md  README.md  firestore.rules  netlify.toml
apps/dashboard/: .env.example  .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/dashboard/public/: _redirects  manifest.json
apps/dashboard/src/: App.tsx  index.css  main.tsx
apps/dashboard/src/components/: ChatPanel.tsx  DecisionTimeline.tsx  InstallHint.tsx  OverrideSheet.tsx  PriceChart.tsx  StatePanel.tsx  WeatherChart.tsx
apps/dashboard/src/contexts/: AuthContext.tsx
apps/dashboard/src/hooks/: useLiveState.ts
apps/dashboard/src/lib/: api.ts  dispositie.ts  firebase.ts  openmeteo.ts  sseChat.ts
apps/dashboard/src/pages/: Advanced.tsx  Dispositie.tsx  SignIn.tsx
apps/dashboard/src/pages/settings/: Connectors.tsx  Layout.tsx  Learning.tsx  Limits.tsx  Strategy.tsx  index.tsx
apps/optimizer/: .dockerignore  .gcloudignore  Dockerfile  cloudbuild.yaml  pyproject.toml
apps/optimizer/scripts/: resideo_bootstrap.py  weheat_bootstrap.py  zonneplan_bootstrap.py
apps/optimizer/src/: main.py
apps/optimizer/src/ai/: __init__.py  claude.py
apps/optimizer/src/connectors/: __init__.py  base.py  energyzero.py  entsoe.py  growatt.py  homewizard.py  openmeteo.py  resideo.py  shelly.py  weheat.py  zonneplan.py
apps/optimizer/src/jobs/: learning_check.py
apps/optimizer/src/notifications/: push.py
apps/optimizer/src/optimizer/: cycle.py  dispositie.py  dispositie_providers.py  learning.py  policy.py  v0.py
apps/optimizer/src/state/: __init__.py  firestore.py  models.py
apps/optimizer/tests/: conftest.py  fake_firestore.py  test_claude_chat.py  test_cycle_apply_plan.py  test_dispositie.py  test_dispositie_live_data.py  test_dispositie_wiring.py  test_energyzero_connector.py  test_entsoe_connector.py  test_firestore_state.py  test_growatt_connector.py  test_homewizard_connector.py  test_openmeteo_connector.py  test_resideo_connector.py  test_weheat_connector.py  test_zonneplan_connector.py
config/: site.config.ts  tariff.energiedirect.ts
hesm-huisjes/: .gitignore
hesm-huisjes/apps/dashboard/public/: manifest.json
hesm-huisjes/apps/dashboard/src/pages/: Simple.tsx
hesm-huisjes/apps/optimizer/src/: main.py
hesm-huisjes/apps/optimizer/src/notifications/: push.py
hesm-huisjes/apps/optimizer/src/optimizer/: learning.py
infra/: SETUP.md
types/: dispositie.ts
