[project]
name = "hesm-optimizer"
version = "0.1.0"
description = "HESM by Huisjes — Cloud Run optimizer service"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Roel Huisjes" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "firebase-admin>=6.5",
    "httpx>=0.27",
    "anthropic>=0.34",
    "defusedxml>=0.7",
    "google-auth>=2.30",
    "sentry-sdk[fastapi]>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = [
    "E501",   # line length (handled by formatter)
    "RUF002", # docstrings use em/en dashes intentionally throughout
    "RUF003", # comments use em/en dashes intentionally throughout
    "N818",   # exception names like ConnectorUnavailable read better
              # than ConnectorUnavailableError at the call site
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N802"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_generics = true
# Scope expands per PR. PR1 introduces the state layer; subsequent PRs
# (connectors, AI, full main.py wiring) widen this list as they land.
files = [
    "src/connectors",
    "src/state",
    "src/optimizer/policy.py",
    "src/optimizer/learning.py",
    "src/main.py",
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "firebase_admin.*",
    "google.cloud.*",
    "google.auth.*",
    "google.oauth2.*",
    "defusedxml.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
